[package]
name = "gennaro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paillier = "0.2.0"
sha2 ={version = "0.10.6", features = ["compress"]}
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = {version = "0.8.5"} #older version must be used for correct linking to CryptoRNG feature
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
serde_derive = "1.0.160"
k256 = { version = "0.13.1", features = ["ecdsa-core", "arithmetic", "hash2curve"] }
lazy_static = "1.4.0"
textnonce = "1.0.0"
getrandom = "0.2.9"
num-integer = "0.1.45"
rug = "1.19.2"
paillier-rs = "0.2.3"
num-primes = "0.3.0"
